Finally fix build to be JDK-16 compatible
* Update gradle to 7.0-rc1 because apparently gradle 6 will not be
  made compatible with JDK 16 any time soon. Update gradlew
* Update spotbugs because it uses ASM
* Removed shadowJar since it used ASM and was going to be removed
  as part of modularization anyway.